Change overflow to try to display other modals correctly

--- a/src/components/photoModal/photoModal.scss
+++ b/src/components/photoModal/photoModal.scss
@@ -13,12 +13,16 @@
   max-height: 80%;
   height: auto;
   min-height: 300px;
-  overflow: hidden;
+  // overflow: hidden;
   cursor: default;
 
   @include small {
     border-radius: 0 0.5rem 0.5rem 0;
     height: 80%;
+  }
+
+  .photo-modal-right {
+    overflow: hidden;
   }
 }
 
